--- a/_config.yml
+++ b/_config.yml
@@ -32,7 +32,7 @@ comments:           true
 # if you don't have any of social below, comment the line.
 google:
   #plus:            #username
-  #analytics:        UA-91683940-1
+  analytics:        UA-124226924-1
   #verify:
   #ad-client:
   #ad-slot:
