--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ sass:
   style:            compressed
 
 # Comments
-disqus_shortname:   joosjuliet
+disqus_shortname:   joos-blog
 comments:           true
 
 # Social
